[package]
name = "granit"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.11"
axum-macros = "0.3.6"
dotenv = "0.15.0"
dotenvy = "0.15.6"
envy = "0.4.2"
futures = "0.3"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.2"
reqwest = { version = "0.11.9", features = ["cookies", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.158"
serde_json = { version = "1.0.68", features = ["raw_value"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "uuid",
] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
utoipa = { version = "3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
hyper = "0.14.26"
chrono = { version = "0.4.24", features = ["serde"] }
questdb-rs = "2.1.3"
